2016-08-09 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-510

	* src/m_rt4.cc, methods.cc (RT4Calc, RT4Init),
	workspace.cc (rt4_is_initialized):
	Work in progress: Implementation of RT4 solver interface.

	* src/rt4.cc, rt4.h:
	Added. Methods for RT4 input preparation etc. RT4Test contents moved here.

	* src/CMakeLists.txt: rt4.cc added to library list.

	* src/disort.cc, m_disort.cc: Cosmetics.

2016-08-08  Lukas Kluft  <lukas.kluft@gmail.com>

	* arts-2-3-509

	* controlfiles/instruments/metmm/common_metmm.arts:

	Removed method calls for absorption lookup tables.

	* controlfiles/instruments/metmm/TestMetMM.arts:

	Included method calls for absoprtion lookup tables.

	Also moved the includes for sensor descriptions closer to the top of the
	controlfile.

2016-08-03 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-508

	* controlfiles/CMakeLists.txt:
	Added RT4 test to (fast) checks.

2016-08-03 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-507

	* 3rdparty/polradtran/rt4/radtran4.f,radscat4.f,radintg4.f:
	Adapted RT4 code for use with ARTS. Particularly, don't use files for
	SSP data input, but pass this down from the calling routine. Changed all
	internal full-stokes size SSP containers to only have nstokes entries.

	* 3rdparty/polradtran/rt4/*.f.orig:
	Keep original RT4 code in addition to ARTS-adapted one.

	* config.h.cmake, CMakeLists.txt, 3rdparty/CMakeLists.txt,
	3rdparty/polradtran/CMakeLists.txt, 3rdparty/polradtran/rt4/CMakeLists.txt,
	src/CMakeLists.txt,src/main.cc:
	Modified/added to include RT4 module.

	* src/m_rt4.cc, rt4.h:
	Added. So far contains only an interface to the proprietary RT4 testc
	test case.

	* src/methods.cc:
	Added RT4Test. Improvements/corrections of DisortCalc doc.

	* controlfiles/artscomponents/polradtran/, TestRT4Test.arts, refRT4.xml,
	testdata/*.xml:
	Added RT4 test case including (atm & SSP) data needed and reference
	results (created from original RT4 calc). NOTE: the testdata is not