@@ -1,5 +1,13 @@
 2016-08-09 Jana Mendrok  <jana.mendrok@chalmers.se>
 
+	* arts-2-3-511
+
+	* src/rt4.h:
+	Reorganized the ifdef ENABLE_RT4 loops in the hope that hudson likes
+	that better...
+
+2016-08-09 Jana Mendrok  <jana.mendrok@chalmers.se>
+
 	* arts-2-3-510
 
 	* src/m_rt4.cc, methods.cc (RT4Calc, RT4Init),
